# ColorBlindAssist

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: demo.cpp
include/cba/: color.hpp  simulator.hpp  types.hpp
src/: simulator.cpp
